...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_CreateNewCryptogram_puzzleNameLabel"
            android:labelFor="@id/editText_CreateNewCryptogram_puzzleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:text="Puzzle Name:" />

...
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView_CreateNewCryptogram_solutionPhraseLabel"
            android:labelFor="@id/editText_CreateNewCryptogram_solutionPhrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:text="Solution:" />

...
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView_createNewCryptogram_MaxAttemptsLabel"
            android:labelFor="@id/editText_CreateNewCryptogram_maxAttempts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:text="Max Attempts:" />

...
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_createNewCryptogram_NewLetterFromLabel"
            android:labelFor="@id/Spinner_CreateNewCryptogram_NewLetterFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="Source Letter:" />
        <TextView
            android:id="@+id/textView_createNewCryptogram_NewLetterToLabel"
            android:labelFor="@id/Spinner_CreateNewCryptogram_NewLetterTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Substitution Letter:" />
        <TextView
            android:id="@+id/textView_createNewCryptogram_NewLetterSaveLabel"
            android:labelFor="@id/Button_CreateNewCryptogram_NewLetterSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

    </LinearLayout>
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_CreateNewCryptogram_saveCryptogram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:text="Save Cryptogram" />
...
