...
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_PlayCryptogram_NewLetterFromLabel"
                android:labelFor="@id/Spinner_PlayCryptogram_NewLetterFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:text="Encoded Letter:" />
            <TextView
                android:id="@+id/textView_PlayCryptogram_NewLetterToLabel"
                android:labelFor="@id/Spinner_PlayCryptogram_NewLetterTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Decoded Letter:" />
            <TextView
                android:id="@+id/textView_PlayCryptogram_NewLetterSaveLabel"
                android:labelFor="@id/Button_PlayCryptogram_NewLetterSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </LinearLayout>
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_PlayCryptogram_attemptSolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:text="Attempt Solution" />
...
